--- a/index.html
+++ b/index.html
@@ -130,12 +130,16 @@
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, 
 		IEEE New Directions Award 2022, jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, for 
-		contributions to symbolic execution. <br><br>
+		contributions to symbolic execution. 
+			
+		<br><br>
 			
 		Abhik's work on program repair has been carried forward in the form of AI agents for code, which led the 
 		acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by <a href="https://www.sonarsource.com/">SonarSource</a>.
-		The works on fuzz testing in 2016-17 have led to explanation of how the fuzzing algorithms work, thereby creating a community, and significantly 
-		lowering the entry barrier to conducting security testing of software on a daily basis. 
+		The works on fuzz testing have led to 
+		<a href="https://news.ycombinator.com/item?id=12330038">explanation of how the fuzzing algorithms work</a>, 
+		thereby creating a community, and significantly 
+		lowering the entry barrier to security testing of open source software.
         
 			<br><br>
 		Abhik enjoys mentoring researchers, and was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
@@ -341,6 +345,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
