--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's group at NUS focuses on building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>),
-		with several research outcomes in software engineering, which have been translated from concept to innovation to practice. These works have been honored with various awards including an 
+		Abhik's group at NUS focuses on building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>). These works have been honored with various awards including an 
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, 
 		IEEE New Directions Award 2022, jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, for 
@@ -134,14 +133,15 @@
 			
 		<br><br>
 			
-		Abhik's work on program repair has been carried forward in the form of AI agents for code, which led the 
-		acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by <a href="https://www.sonarsource.com/">SonarSource</a>.
-		The works on fuzz testing have led to 
+		Research work from Abhik's team has led to significant outcomes in software engineering practice over the years.
+		His work on specification inference in program repair has been carried forward by building a new kind of AI agents for code, 
+		leading to the acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
+		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have led to 
 		<a href="https://news.ycombinator.com/item?id=12330038">explanation of how the fuzzing algorithms work</a>, 
-		thereby creating a community, and significantly 
-		lowering the entry barrier to security testing of open source software.
-        
+		thereby creating a community, and significantly lowering the entry barrier to security testing of open source software.
+
 			<br><br>
+			
 		Abhik enjoys mentoring researchers, and was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
 		and they have gone on to receive many prestigious early career awards (including ACM-W Rising Star Award given to only one
@@ -345,6 +345,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
