--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		leading to the acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
 		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have led to 
 		<a href="https://news.ycombinator.com/item?id=12330038">explanation of how the fuzzing algorithms work</a>, 
-		thereby creating a community, and significantly lowering the entry barrier to security testing of open source software.
+		thereby creating a community, and lowering the entry barrier to security testing of open source software.
 
 			<br><br>
 			
@@ -154,6 +154,7 @@
 		a member of the editorial board of Communications of the ACM.
 		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, recognized for contributions to 
 		automated program repair and fuzz testing.
+
 		
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
@@ -345,6 +346,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
