--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	    The concept of specification inference in program repair has been carried forward by building a new kind of AI agents for code.
 		This led to the acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
 		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have led to 
-		explanation of how the fuzzing algorithms work, 
+		foundational understanding of how the fuzzing algorithms work, 
 		thereby creating a community, and lowering the entry barrier to automated vulnerability discovery in software.
 
 			<br><br>
@@ -346,6 +346,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
