--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 			
 		<br><br>
 			
-		Research work from Abhik's team has led to significant outcomes in software engineering over the years.
+		Research work from Abhik's team has impacted software engineering practice over the years.
 	    His research of specification inference in program repair has been carried forward by building trusted AI agents for code, 
-		which are widely used. This led to the acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
+		which are widely used. This led to the acquisition of a NUS spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
 		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have led to foundational
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">understanding 
 		</a> of the efficacy of fuzzing algorithms, lowering the entry barrier to software vulnerability discovery in practice.
@@ -346,6 +346,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
