--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
 		<br><br>
 			
 		Research work from Abhik's team has impacted software engineering practice over the years.
-	    His research on specification inference in program repair has been carried forward by building widely-used trusted AI agents for code. 
-		This led to the acquisition of a NUS spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
-		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have led to foundational
-		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">understanding 
-		</a> of how fuzzing algorithms work, lowering the entry barrier to software vulnerability discovery in practice.
-
+	    His research on semantic program repair has helped build the foundations of program repair as a field.
+        The ideas on specification inference in program repair have been subsequently carried forward by building 
+		widely-used trusted AI agents for code. This led to the acquisition of a NUS spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
+		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have contributed to 
+		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">conceptual 
+		understanding </a> of how fuzzing algorithms work, by building effective greybox fuzzers which incorporate ideas from symbolic analysis and yet avoid its 
+		overheads. This has significantly reduced the usability barrier to automated software vulnerability discovery in practice. 
+			
 			<br><br>
 			
 		Abhik enjoys mentoring researchers, and was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
@@ -346,6 +348,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
