--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 			
 		<br><br>
 			
-		Research work from Abhik's team has impacted software engineering practice over the years.
-	    His research on semantic program repair has helped build the foundations of program repair as a field.
-        The ideas on specification inference in program repair have been subsequently carried forward by building 
+		Research works from Abhik's team has impacted software engineering practice over the years.
+	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> have 
+		helped build the foundations of program repair as a field. These ideas have been subsequently carried forward by building 
 		widely-used trusted AI agents for code. This led to the acquisition of a NUS spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
 		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have contributed to 
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">conceptual 
@@ -348,6 +348,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
