--- a/index.html
+++ b/index.html
@@ -135,12 +135,13 @@
 			
 		Research works from Abhik's team has impacted software engineering practice over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> have 
-		helped build the foundations of program repair as a field. These ideas have been subsequently carried forward by building 
-		widely-used trusted AI agents for code. This led to the acquisition of a NUS spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
-		<a href="https://www.sonarsource.com/">SonarSource</a>. His works on fuzz testing have contributed to 
+		helped build the foundations of program repair as a field. His research on program repair
+		has subsequently influenced the building of trusted AI agents for code, which are widely-used. This led to the acquisition of a NUS 
+		spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
+		<a href="https://www.sonarsource.com/">SonarSource</a>. Abhik's works on fuzz testing have also contributed to
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">conceptual 
-		understanding </a> of how fuzzing algorithms work, by building effective greybox fuzzers which incorporate ideas from symbolic analysis and yet avoid its 
-		overheads. This has significantly reduced the usability barrier to automated software vulnerability discovery in practice. 
+		understanding </a> of software security. Fuzz testing technology from his group has significantly reduced the usability barrier to 
+		automated software vulnerability discovery in practice, by incoporating ideas from symbolic analysis into lightweight fuzzing frameworks.
 			
 			<br><br>
 			
@@ -348,6 +349,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
