--- a/index.html
+++ b/index.html
@@ -136,9 +136,13 @@
 		Research works from Abhik's team has impacted software engineering practice over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> have 
 		helped build the foundations of program repair as a field. His research on program repair
-		has subsequently influenced the building of trusted AI agents for code, which are widely-used. This led to the acquisition of a NUS 
-		spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by 
-		<a href="https://www.sonarsource.com/">SonarSource</a>. Abhik's works on fuzz testing have also contributed to
+		has subsequently influenced the building of widely-used trusted AI agents for code, 
+		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>.
+		This led to the 
+		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
+		acquisition</a> of a NUS spinoff AutoCodeRover by SonarSource for integration into the widely-used
+		<a href="https://en.wikipedia.org/wiki/SonarQube">SonarQube</a> static analyser. 
+		Abhik's works on fuzz testing have also contributed to
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">conceptual 
 		understanding </a> of software security. Fuzz testing technology from his group has significantly reduced the usability barrier to 
 		automated software vulnerability discovery in practice, by incoporating ideas from symbolic analysis into lightweight fuzzing frameworks.
@@ -349,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
