--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 		<a href="https://en.wikipedia.org/wiki/SonarQube">SonarQube</a> static analyser. 
 		Abhik's works on fuzz testing have also contributed to
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">conceptual 
-		understanding </a> of software security. Fuzz testing technology from his group has significantly reduced the usability barrier to 
+		understanding</a> of secure software engineering. 
+		Fuzz testing technology from his group has significantly reduced the usability barrier to 
 		automated software vulnerability discovery in practice, by incoporating ideas from symbolic analysis into lightweight fuzzing frameworks.
 			
 			<br><br>
@@ -353,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
