--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
 		Abhik's group at NUS focuses on building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>). These works have been honored with various awards including an 
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, 
-		IEEE New Directions Award 2022, jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, for 
-		contributions to symbolic execution. 
+		IEEE New Directions Award 2022 for contributions to symbolic execution. 
 			
 		<br><br>
 			
@@ -353,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
