--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
 		acquisition</a> of a NUS spinoff AutoCodeRover by SonarSource for integration into the widely-used
 		<a href="https://en.wikipedia.org/wiki/SonarQube">SonarQube</a> static analyser. 
 		Abhik's works on fuzz testing have contributed to the understanding of secure software engineering and its challenges.
-		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">Fuzz testing 
-		technologies</a> from his group have significantly reduced the usability barrier to 
-	    software vulnerability discovery in practice, by incoporating ideas from symbolic analysis into lightweight fuzzing frameworks.
+		Fuzz testing 
+		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">technologies</a> 
+		from his group have reduced the usability barrier to 
+	    software vulnerability discovery in actual practice. This was made possible 
+		by incoporating ideas from symbolic analysis into fuzzing frameworks, while avoiding symbolic analysis overheads.
 			
 			<br><br>
 			
@@ -352,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
