--- a/index.html
+++ b/index.html
@@ -133,18 +133,17 @@
 		<br><br>
 			
 		Research works from Abhik's team has impacted software engineering practice over the years.
-	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> have 
+	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
 		helped build the foundations of program repair as a field. His research on program repair
-		has subsequently influenced the building of widely-used trusted AI agents for code, 
-		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>.
-		This led to the 
+		has influenced the building of widely-used trusted AI agents for code, 
+		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. This led to the 
 		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
 		acquisition</a> of a NUS spinoff AutoCodeRover by SonarSource for integration into the widely-used
 		<a href="https://en.wikipedia.org/wiki/SonarQube">SonarQube</a> static analyser. 
 		Abhik's works on fuzz testing have contributed to the understanding of secure software engineering and its challenges.
 		Fuzz testing 
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">technologies</a> 
-		from his group have reduced the usability barrier to 
+		from his group reduced the usability barrier to 
 	    software vulnerability discovery in actual practice. This was made possible 
 		by incoporating ideas from symbolic analysis into fuzzing frameworks, while avoiding symbolic analysis overheads.
 			
@@ -354,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
