--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">technologies</a> 
 		from his group reduced the usability barrier to 
 	    software vulnerability discovery in actual practice. This was made possible 
-		by incoporating ideas from symbolic analysis into fuzzing frameworks, while avoiding symbolic analysis overheads.
+		by implicitly incoporating ideas from symbolic analysis into fuzzing frameworks, while avoiding symbolic execution overheads.
 			
 			<br><br>
 			
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
