--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 		Abhik's works on fuzz testing have contributed to the understanding of secure software engineering and its challenges.
 		Fuzz testing 
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">technologies</a> 
-		from his group reduced the usability barrier to 
-	    software vulnerability discovery in actual practice, made possible 
+		from his group have reduced the usability barrier to 
+	    software vulnerability discovery in actual practice. This was made possible 
 		by implicitly incoporating ideas from symbolic analysis into fuzzing frameworks.
 			
 			<br><br>
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
