--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
 			
 		Abhik enjoys mentoring researchers, and was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
-		and they have gone on to receive many prestigious early career awards (including ACM-W Rising Star Award given to only one
-		female faculty member in Computing). Abhik has 
-		served the software engineering research community in various capacities including as chair of the major
+		and they have gone on to receive many prestigious early career awards, including 
+		ACM-W Rising Star Award given to <a href="https://www.shinhwei.com/">only one
+		female faculty in Computing</a>. 
+		Abhik has served the software engineering research community in various capacities including as chair of the major
 		conferences (ICSE and FSE), as well as chair of the 
 		<a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
 		He is the current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
@@ -353,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
