--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's group at NUS focuses on building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>). These works have been honored with various awards including an 
+		Abhik's group at NUS researches in building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>). These works have been honored with various awards including an 
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, and
 		IEEE New Directions Award 2022 for contributions to symbolic execution. 
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
