--- a/index.html
+++ b/index.html
@@ -125,14 +125,8 @@
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's group at NUS researches in building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>). These works have been honored with various awards including an 
-		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(Test-of-time award) for symbolic analysis based program repair, and
-		IEEE New Directions Award 2022 for contributions to symbolic execution. 
-			
-		<br><br>
-			
-		Research works from Abhik's team has impacted software engineering practice over the years.
+		Abhik's group at NUS researches in building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>).
+		Research works from the group have impacted software engineering practice over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
 		helped build the foundations of program repair as a field. His research on program repair
 		has influenced the building of widely-used trusted AI agents for code, 
@@ -147,7 +141,7 @@
 	    software vulnerability discovery in actual practice, made possible 
 		by implicitly incoporating ideas from symbolic analysis into fuzzing frameworks.
 			
-			<br><br>
+		<br><br>
 			
 		Abhik enjoys mentoring researchers, and was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
@@ -160,6 +154,12 @@
 		He is the current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
 		ACM Transactions on Software Engineering and Methodology</a> (TOSEM), and 
 		a member of the editorial board of Communications of the ACM.
+			
+		<br><br>
+		In terms of research recognition, Abhik's research works have been honored with various awards including an 
+		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
+		(Test-of-time award) for symbolic analysis based program repair, and
+		IEEE New Directions Award 2022 for contributions to symbolic execution. 
 		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, recognized for contributions to 
 		automated program repair and fuzz testing.
 
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
