--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		Abhik's group at NUS researches in building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>).
 		Research works from the group have impacted software engineering practice over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
-		helped build the foundations of program repair as a field. His research on program repair
+		helped build the foundations of program repair as a field. Abhik's research on program repair
 		has influenced the building of widely-used trusted AI agents for code, 
 		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. This led to the 
 		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
