--- a/index.html
+++ b/index.html
@@ -153,14 +153,12 @@
 		<a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
 		He is the current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
 		ACM Transactions on Software Engineering and Methodology</a> (TOSEM), and 
-		a member of the editorial board of Communications of the ACM.
-			
-		<br><br>
-		In terms of research recognition, Abhik's research works have been honored with various awards including an 
+		a member of the editorial board of Communications of the ACM. Abhik's research works have been honored with various awards including an 
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, and
 		IEEE New Directions Award 2022 for contributions to symbolic execution. 
-		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, recognized for contributions to 
+		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, 
+		recognized for contributions to 
 		automated program repair and fuzz testing.
 
 		
@@ -354,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
