--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
-		where he leads a research team on <a  href = "https://nus-tss.github.io/">
-	        Trustworthy and Secure Software (TSS)</a>. 
+		where he leads a research team on trustworthy and secure software engineering (<a href="https://nus-tss.github.io/">TSS group<a>). 
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's group at NUS researches in building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>).
-		Research works from the group have impacted software engineering practice over the years.
+		Abhik's group at NUS (<a href="https://nus-tss.github.io/">TSS group<a>), focused on building trustworthy and secure software,
+		has impacted the software engineering field and its practice over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
 		helped build the foundations of program repair as a field. Abhik's research on program repair
 		has influenced the building of widely-used trusted AI agents for code, 
@@ -352,6 +351,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
