--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
-		where he leads a research team on trustworthy and secure software engineering (<a href="https://nus-tss.github.io/">TSS group<a>). 
+		where he leads a research team on trustworthy and secure software engineering. 
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
@@ -351,6 +351,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
