--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's group at NUS (<a href="https://nus-tss.github.io/">TSS group<a>), focused on building trustworthy and secure software,
+		Abhik's group at NUS, focused on building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>),
 		has impacted the software engineering field and its practice over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
 		helped build the foundations of program repair as a field. His research on program repair
@@ -351,6 +351,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
