--- a/index.html
+++ b/index.html
@@ -120,23 +120,22 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
-		where he leads a research team on trustworthy and secure software engineering. 
+		where he leads a research team on trustworthy and secure software engineering (<a href="https://nus-tss.github.io/">TSS group<a>).
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
-		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's group at NUS, focused on building Trustworthy and Secure Software (<a href="https://nus-tss.github.io/">TSS group<a>),
-		has impacted the software engineering field and its practice over the years.
+		and has been a faculty member at NUS School of Computing since 2001. Research from <a href="https://nus-tss.github.io/">TSS group<a>
+		has impacted the software engineering field and its practice over the years, particularly in software testing and program repair.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
-		helped build the foundations of program repair as a field. His research on program repair
+		helped build the foundations of program repair as a field. The research on program repair
 		has influenced the building of widely-used trusted AI agents for code, 
 		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. This led to the 
 		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
 		acquisition</a> of a NUS spinoff AutoCodeRover by SonarSource for integration into the widely-used
 		<a href="https://en.wikipedia.org/wiki/SonarQube">SonarQube</a> static analyser. 
-		His works on fuzz testing have contributed to the understanding of secure software engineering and its challenges.
+		The works on fuzz testing have contributed to the understanding of secure software engineering and its challenges.
 		Fuzz testing 
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">technologies</a> 
-		from his group have reduced the usability barrier to 
+		from the group have reduced the usability barrier to 
 	    software vulnerability discovery in actual practice, made possible 
 		by implicitly incoporating ideas from symbolic analysis into fuzzing frameworks.
 			
@@ -351,6 +350,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
