--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 		where he leads a research team on trustworthy and secure software engineering (<a href="https://nus-tss.github.io/">TSS group<a>).
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
-		and has been a faculty member at NUS School of Computing since 2001. Research from <a href="https://nus-tss.github.io/">TSS group<a>
+		and has been a faculty member at NUS School of Computing since 2001. Research from Abhik's group at NUS
 		has impacted the software engineering field and its practice over the years, particularly in software testing and program repair.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
-		helped build the foundations of program repair as a field. The research on program repair
-		has influenced the building of widely-used trusted AI agents for code, 
+		helped build the foundations of program repair as a field. Abhik's research on program repair
+		has directly influenced the building of widely-used trusted AI agents for code, 
 		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. This led to the 
 		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
 		acquisition</a> of a NUS spinoff AutoCodeRover by SonarSource for integration into the widely-used
@@ -350,6 +350,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
