--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on trustworthy and secure software engineering (<a href="https://nus-tss.github.io/">TSS group<a>).
 		He received his PhD in Computer Science 
-		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
+		from <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001. Research from Abhik's group at NUS
 		has impacted the software engineering field and its practice over the years, particularly in software testing and program repair.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
@@ -350,6 +350,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
