--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		<a href="https://en.wikipedia.org/wiki/SonarQube">SonarQube</a> static analyser. 
 		The group's works on fuzz testing have contributed to the understanding of secure software engineering.
 		<a href="https://gitlab.liu.se/ulfka17/aflplusplus/-/blob/8e712d1a740b30f9e2d5655d97d4cac6e8aed543/docs/power_schedules.md">Fuzzing technologies</a> 
-		from the group have significantly reduced the usability barrier to 
+		from the group have reduced the usability barrier to 
 	    software vulnerability discovery in actual practice, made possible 
 		by implicitly incoporating ideas from symbolic analysis into fuzzing frameworks.
 			
@@ -349,6 +349,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
