--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			
 		<br><br>
 			
-		Abhik enjoys mentoring researchers, and was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
+		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
 		and they have gone on to receive many prestigious early career awards, including 
 		ACM-W Rising Star Award given to <a href="https://www.shinhwei.com/">only one
@@ -349,6 +349,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
