--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		has impacted the software engineering field and its practice over the years, particularly in software testing and program repair.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
 		helped build the foundations of program repair as a field. The group's research on program repair
-		directly influenced the building of widely-used trusted AI agents for code, 
+		subsequently influenced its research on building trusted AI agents for code, 
 		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. This led to the 
 		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
 		acquisition</a> of a NUS spinoff AutoCodeRover by SonarSource for integration into the widely-used
@@ -349,6 +349,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
