--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		<a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
 		He is the current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
 		ACM Transactions on Software Engineering and Methodology</a> (TOSEM), and 
-		a member of the editorial board of Communications of the ACM. Abhik's research works have been honored with various awards including an 
+		a member of the editorial board of Communications of the ACM. His research works have been honored with various awards including an 
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, and
 		IEEE New Directions Award 2022 for contributions to symbolic execution. 
@@ -349,6 +349,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
